--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
     <!-- Tambahkan tombol-tombol tahun lainnya sesuai kebutuhan -->
   </div>
   <div class="photos">
-    <img src="https://s.yimg.com/fz/api/res/1.2/Ay7evW0xe41e0NwS_fb7oA--~C/YXBwaWQ9c3JjaGRkO2ZpPW9wdGk7aD0xMjA7dz04MA--/https://s.yimg.com/zb/imgv1/3b3b2779-b5dc-3f6f-8412-6d3cbd33191f/t_140x140" alt="Deskripsi Foto 1">
-    <img src="https://example.com/path-to-image2.jpg" alt="Deskripsi Foto 2">
+    <img src="https://image.tmdb.org/t/p/original/w6tisnUMZFk2f2BQaHu7OnUGkgb.jpg" alt="Aquaman And The Lost Kingdom(2023)">
+    <img src="https://image.tmdb.org/t/p/original/kYnXThiYlV5QBndJucgJSFveBlG.jpg" alt=" The Little Mermaid">
   <!-- Tambahkan elemen <img> untuk setiap foto yang ingin Anda tampilkan dengan URL eksternal -->
 </div>
   </div>
