--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
     </header>
    <div class="photo-gallery">
-  <h2>Galeri Foto</h2>
+  <h2>Daftar Film</h2>
   <div class="year-buttons">
     <button class="year-button" data-year="2023">2023</button>
     <button class="year-button" data-year="2022">2022</button>
