--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <div class="container">
         
-        <div class="jalan">
+        <div class="berhenti">
           <marquee>SELAMAT DATANG</marquee>
         </div>
         
