--- a/login/index.html
+++ b/login/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>Sign in & Sign up</title>
 </head>
-
+<header class="header">
+    <!-- Konten header Anda di sini -->
+</header>
 <body>
     <div class="wrapper">
         <div class="form-container sign-up">
