--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <div class="container">
         
         <div class="jalan">
-          <marquee>SELAMAT DATANG</marquee>
+          <marquee>DUNIA FILM MALIKI</marquee>
         </div>
         
       </div>
