--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
         <div class="jalan">
           <marquee>DUNIA FILM MALIKI</marquee>
         </div>
+        <nav class="header-nav">
+          <ul>
+            <li><a href="#film">Film</a></li>
+            <li><a href="#anime">Anime</a></li>
+            <li><a href="#genre">Genre</a></li>
+            <li><a href="#tentang-kami">Tentang Kami</a></li>
+          </ul>
+        </nav>
         
       </div>
     </header>
