--- a/index.html
+++ b/index.html
@@ -12,6 +12,25 @@
   </style>
   </head>
   <body>
+    <div class="container">
+        <h1>Film</h1>
+        <!-- Daftar film atau konten terkait dengan "Film" -->
+    </div>
+
+    <div class="container">
+        <h1>Anime</h1>
+        <!-- Daftar anime atau konten terkait dengan "Anime" -->
+    </div>
+
+    <div class="container">
+        <h1>Genre</h1>
+        <!-- Daftar genre atau konten terkait dengan "Genre" -->
+    </div>
+
+    <div class="container">
+        <h1>Tentang Kami</h1>
+        <!-- Konten tentang tim, visi, dan misi Anda -->
+    </div>
     <header>
       <div class="container">
         
