--- a/index.html
+++ b/index.html
@@ -18,17 +18,22 @@
     </div>
 
     <div class="container">
-        <h1>Anime</h1>
+        <h1><a href="#">Film</a></h1>
+        <!-- Daftar film atau konten terkait dengan "Film" -->
+    </div>
+
+    <div class="container">
+        <h1><a href="#">Anime</a></h1>
         <!-- Daftar anime atau konten terkait dengan "Anime" -->
     </div>
 
     <div class="container">
-        <h1>Genre</h1>
+        <h1><a href="#">Genre</a></h1>
         <!-- Daftar genre atau konten terkait dengan "Genre" -->
     </div>
 
     <div class="container">
-        <h1>Tentang Kami</h1>
+        <h1><a href="#">Tentang Kami</a></h1>
         <!-- Konten tentang tim, visi, dan misi Anda -->
     </div>
     <header>
