--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <div class="gambar-terbagi">
     <figure>
       <img src="https://image.tmdb.org/t/p/original/w6tisnUMZFk2f2BQaHu7OnUGkgb.jpg" alt="Aquaman And The Lost Kingdom(2023)">
-      <figcaption>Aquaman And The Lost Kingdom(2023)</figcaption>
+      <figcaption><a href="#">Aquaman And The Lost Kingdom(2023)</a></figcaption>
     </figure>
     <figure>
       <img src="https://image.tmdb.org/t/p/original/kYnXThiYlV5QBndJucgJSFveBlG.jpg" alt=" The Little Mermaid">
